# WMM2015

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  RunWMM2015.py  meson.build  setup.cfg  setup.py
.github/workflows/: ci.yml
archive/: .appveyor.yml  .travis.yml
pywmm2015/: __init__.py  plots.py
src/: CMakeLists.txt  GeomagnetismHeader.h  GeomagnetismLibrary.c  wmm_point.c  wmm_point_sub.c
src/wmm2015/: CMakeLists.txt  base.py  setup.cmake
src/wmm2015/src/: wmm_point.c
src/wmm2015/tests/: test_all.py
tests/: test_all.py
wmm2015/: CMakeLists.txt  __init__.py  base.py  build.py  plots.py
wmm2015/tests/: test_all.py
