[metadata]
name = wmm2015
version = 0.9.1
author = Michael Hirsch, Ph.D.
url = https://github.com/space-physics/wmm2015
description = WMM2015 geomagnetic model with simple object-oriented Python interface
keywords =
  geomagnetic
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  xarray
  numpy
  sciencedates

[options.extras_require]
tests =
  pytest
  pytest-cov
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy

[options.entry_points]
console_scripts =
